<resources>
    <string name="app_name">#Ultimate</string>

    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="player_turn">X is Playing</string>
    <string name="board_data">board_data</string>
    <string name="any_changes">any_changes</string>
    <string name="start">Click Play to start</string>
    <string name="reset">Are you sure you want to start a new game?</string>
    <string name="win_dialog_text">Wins!</string>
    <string name="win_dialog_button_text">Return to main menu</string>
    <string name="game_over">Game Over</string>
    <string name="theme_minimal">Minimal</string>
    <string name="theme_dc">DC</string>
    <string name="theme_marvel">Civil War</string>
    <string name="undo">Undo</string>
    <string name="restart">Restart</string>
    <string name="play">PLAY</string>
    <string name="shared_prefs">prefs</string>
    <string name="prefs_theme_key">theme_key</string>
    <string name="single_play">Single Player</string>
    <string name="local_play">Multiplayer</string>
</resources>
