<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Prayansh Srivastava
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <include
        android:id="@+id/board"
        layout="@layout/game_board"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/restart"
        android:layout_width="@dimen/button"
        android:layout_height="@dimen/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/cell_margin"
        android:background="@drawable/button_selector"
        android:src="@drawable/play"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:scaleType="centerCrop"
        android:tint="@color/white"
        android:padding="@dimen/cell_margin" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="@dimen/button"
        android:layout_height="@dimen/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/cell_margin"
        android:background="@drawable/button_selector"
        android:src="@drawable/settings"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:scaleType="centerCrop"
        android:tint="@color/white"
        android:padding="@dimen/cell_margin" />

    <TextView
        android:id="@+id/tv_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/board"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/cell_margin"
        android:padding="10dip"
        android:text="@string/player_turn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_turn"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

</RelativeLayout>