<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Prayansh Srivastava
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/grad_blue"
                android:gravity="center"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="24dip"
            android:paddingRight="24dip">

            <ImageView
                android:id="@+id/ivCross"
                style="@style/player_display"
                android:src="@drawable/cross"/>

            <ImageView
                android:id="@+id/ivCircle"
                style="@style/player_display"
                android:src="@drawable/circle"/>
        </LinearLayout>

        <Button
            android:id="@+id/bSingle"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/btn_light"
            android:padding="15dip"
            android:text="@string/single_play"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/bLocal"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/btn_light"
            android:padding="15dip"
            android:text="@string/local_play"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/bSettings"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/btn_light"
            android:padding="15dip"
            android:text="@string/settings"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</RelativeLayout>